# action-update-release

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml  test_action.yml
src/: action_update_release.py
