[project]
name = "action-update-release"
version = "0.1.0"
description = "Update GitHub Release using GitHub REST API"
authors = [
    {name = "zckv",email = "zackarie.vinckier--coffinier@eviden.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[project.scripts]
update = "action_update_release:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
